--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -2,7 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bee99293",
+   "metadata": {},
+   "source": [
+    "<center>\n",
+    "    <img src=\"https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-DS0105EN-SkillsNetwork/labs/Module2/images/SN_web_lightmode.png\" width=\"300\" alt=\"cognitiveclass.ai logo\">\n",
+    "</center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Add your code below following the instructions given in the course\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Data Science Tools and Ecosystem"
@@ -10,7 +25,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cffaced",
    "metadata": {},
    "source": [
     "In this notebook, Data Science Tools and Ecosystem are summarized."
@@ -18,10 +32,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f19dffc",
    "metadata": {},
    "source": [
     "**Objetives:**\n",
+    "\n",
     "* List popular languages for Data Science\n",
     "* List some commonly libraries used by Data Scientist\n",
     "* Create a Jupyter notebook\n",
@@ -30,7 +44,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bd210b2",
    "metadata": {},
    "source": [
     "Some of the popular languages that Data Scientists use are:\n",
@@ -41,8 +54,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5814d8a5",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "Some of the commonly used libraries used by Data Scientist include:\n",
     "1. ggplot\n",
@@ -52,7 +66,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae29e3ad",
    "metadata": {},
    "source": [
     "|Data Science Tools |\n",
@@ -64,7 +77,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56875053",
    "metadata": {},
    "source": [
     "### Below are few examples of evaluating arithmetic expression in Python."
@@ -72,9 +84,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "2c88b6d0",
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -82,7 +95,7 @@
        "17"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,9 +107,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "053bcbb0",
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -104,7 +118,7 @@
        "3.3333333333333335"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +130,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8873e15",
    "metadata": {},
    "source": [
     "## Author\n",
@@ -126,7 +139,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "966aba9b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -134,9 +146,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-python-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -148,9 +160,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 4
 }
